--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "type": "module",
   "devDependencies": {
     "@types/bun": "latest",
-    "mitata": "^1.0.34"
-  },
-  "peerDependencies": {
+    "mitata": "^1.0.34",
+    "msgpackr": "^1.11.8",
     "typescript": "^5"
   }
 }
